# postseg-connectomics

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  config.py  pyproject.toml  types.py
.github/workflows/: ci.yml
configs/: cremi_sample_a.yaml  default.yaml  xpress_sample.yaml  xpress_validation.yaml
connectomics_pipeline/: __init__.py  cli.py  pipeline.py
connectomics_pipeline/assembly/: __init__.py  assembler.py  confidence.py  topology.py
connectomics_pipeline/candidates/: __init__.py  alignment.py  continuity.py  generator.py  proximity.py  scoring.py
connectomics_pipeline/evaluation/: __init__.py  ground_truth.py  (+1 more)
docs/: EXPERIMENT_LOG.md  TESTING.md  TESTING_PLAN.md  generate_cremi_visuals.py  generate_example_images.py
report/: abstract.tex  appendices.tex  background.tex  conclusion.tex  futurework.tex  introduction.tex  main.tex  methodology.tex  references.bib  relatedwork.tex  results.tex  titlepage.tex
scripts/: generate_readme_images.py  generate_test_data.py  generate_visual_report.py  inspect_connections.py  run_pipeline.py  train_ml_filter.py
tests/: conftest.py  test_assembly.py  test_candidates.py  test_cli.py  test_config.py  test_config_nested.py  test_edge_cases.py  test_export.py  test_fragments.py  test_graph.py  test_ground_truth.py  test_io.py  test_logging_setup.py  test_mesh.py  test_ml_filter.py  test_pipeline.py  test_precomputed_reader.py  test_precomputed_segmentation.py  test_report.py  test_spatial.py  test_stitching.py  test_validation.py  test_visualization.py  test_xpress_ground_truth.py  test_zarr_reader.py
(+38 files in other folders)
